[package]
name = "help"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
hashbrown = "0.14"
sqlx = { version = "0.7", features = [
  "mysql",
  "runtime-tokio",
  "tls-rustls",
  "chrono",
  "macros",
] }
tokio = { version = "1.35", features = [
  "macros",
  "net",
  "rt-multi-thread",
  "sync",
  "signal",
  "time",
] }
tokio-util = { version = "0.7", features = ["full"] }
futures = { version = "0.3", features = ["thread-pool"] }
toml = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
  "ansi",
  "env-filter",
  "tracing-log",
] }
dotenvy = "0.15.7"
markdown = "0.3.0"
